--- a/index.html
+++ b/index.html
@@ -97,10 +97,10 @@
       <a href="https://studentkevinc.github.io/" target="_blank" class="btn lang" data-en="Review Project" data-es="Ver Proyecto">Review Project</a>
     </div>
     <div class="projects-card">
-      <img src="img/baristas.jpg" alt="" loading="lazy">
+      <img src="img/project2.jpg" alt="" loading="lazy">
       <h3 class="lang" data-en="Project 2" data-es="Proyecto 2">Project 2</h3>
       <p class="lang" data-en="Baristas is a website about a place that offers different services such as coffee, food or desserts, in addition to having an interactive shopping cart." data-es="Baristas es un sitio web acerca de un local que ofrece distintos servicios como cafe,comida o postres ademas de contar con un carrito de compras interactivo.</p>
-      <a href="https://studentkevinc.github.io/baristas.github.io/cafe-pag/index.html" class="btn lang" data-en="Review Project" data-es="Ver Proyecto">Review Project</a>
+      <a href="https://studentkevinc.github.io/baristas.github.io/cafe-pag/index.html" target="_blank" class="btn lang" data-en="Review Project" data-es="Ver Proyecto">Review Project</a>
     </div>
     <div class="projects-card">
       <img src="img/project3.png" alt="" loading="lazy">
