--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
     <div class="projects-card">
       <img src="img/baristas.jpg" alt="" loading="lazy">
       <h3 class="lang" data-en="Project 2" data-es="Proyecto 2">Project 2</h3>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga quos inventore delectus. Dicta incidunt nisi repudiandae lauda.</p>
+      <p class="lang" data-en="Baristas is a website about a restaurant that offers various services such as coffee, food, and desserts, as well as an interactive shopping cart." data-es="Baristas es un sitio web acerca un local que ofrece distintos servicios como cafe,comida o postres ademas de contar con un carrito de compras interactivo..">Baristas is a website about a restaurant that offers various services such as coffee, food, and desserts, as well as an interactive shopping cart.</p>
       <a href="https://studentkevinc.github.io/baristas.github.io/cafe-pag/index.html" target="_blank" class="btn lang" data-en="Review Project" data-es="Ver Proyecto">Review Project</a>
     </div>
     <div class="projects-card">
