Actualizaciones visuales y funcionales en el portafolio

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   <section class="home" id="home">
     <div class="home-content">
       <h1 class="typewriter-line1 lang" data-en="Hi, It's <span class='span'>Kevin</span>" data-es="Hola, Soy <span class='span'>Kevin</span>">Hi, It's <span class="span">Kevin</span></h1>
-      <h3 class="typewriter-line2 lang" data-en="I'm a <span class='span'>Student</span>" data-es="Soy <span class='span'>Freelance</span>">I'm a <span class="span">Freelance</span></h3>
+      <h3 class="typewriter-line2 lang" data-en="I'm a <span class='span'>Freelance</span>" data-es="Soy <span class='span'>Freelance</span>">I'm a <span class="span">Freelance</span></h3>
     </div>
   </section>
 
@@ -43,16 +43,17 @@
   <section class="about" id="about">
     <div class="about-img">
       <img src="img/imgMe.png" alt="Kevin Cornejo" loading="lazy"/>
+      <p class="about-email"> <a href="mailto:nik31976@gmail.com">nik31976@gmail.com</a></p>
     </div>
     <div class="about-content">
       <h2 class="lang" data-en="About <span class='span'>Me</span>" data-es="Sobre <span class='span'>Mí</span>">About <span class="span">Me</span></h2>
-      <p class="lang" data-en="I'm a Computer Science and Telecommunications Engineering student with a passion for full-stack development, problem-solving, and continuous learning. I love creating attractive and functional interfaces, exploring new technologies, and applying my knowledge to real-world projects.\n\nI'm currently seeking opportunities to apply my web development skills and continue growing as a professional." data-es="Soy estudiante de Ingeniería en Computación y Telecomunicaciones con pasión por el desarrollo full-stack, la resolución de problemas y el aprendizaje continuo. Me encanta crear interfaces atractivas y funcionales, explorar nuevas tecnologías y aplicar mis conocimientos en proyectos reales.\n\nActualmente estoy buscando oportunidades para aplicar mis habilidades en desarrollo web y seguir creciendo como profesional.">
-        I'm a Computer Science and Telecommunications Engineering student with a passion for full-stack development, problem-solving, and continuous learning.<br><br>
-        I love creating attractive and functional interfaces, exploring new technologies, and applying my knowledge to real-world projects.<br><br>
-        I'm currently seeking opportunities to apply my web development skills and continue growing as a professional.
+      <p class="lang" data-en="I'm a student of Computer Science and Telecommunications Engineering with a strong passion for full-stack development, problem-solving, and continuous learning. I enjoy creating engaging and functional user interfaces, exploring new technologies, and applying my skills to real-world projects.\n\nI'm currently seeking opportunities to apply my web development abilities and continue growing as a professional." data-es="Soy estudiante de Ingeniería en Computación y Telecomunicaciones con pasión por el desarrollo full-stack, la resolución de problemas y el aprendizaje continuo. Me encanta crear interfaces atractivas y funcionales, explorar nuevas tecnologías y aplicar mis conocimientos en proyectos reales.\n\nActualmente estoy buscando oportunidades para aplicar mis habilidades en desarrollo web y seguir creciendo como profesional.">
+        I’m a student of Computer Science and Telecommunications Engineering with a strong passion for full-stack development, problem-solving, and continuous learning.<br><br>
+        I enjoy creating engaging and functional user interfaces, exploring new technologies, and applying my skills to real-world projects.<br><br>
+        I’m currently seeking opportunities to apply my web development abilities and continue growing as a professional.
       </p>
       <div class="btn-group">
-        <a href="CV/cvkevin.pdf" class="btn lang" target="_blank" rel="noopener noreferrer" data-en="Hire" data-es="Contratar">CV</a>
+        <a href="CV/cvkevin.pdf" class="btn lang" target="_blank" rel="noopener noreferrer" data-en="Download CV" data-es="Descargar CV">Download CV</a>
         <a href="#contact" class="btn lang" data-en="Contact" data-es="Contacto">Contact</a>
       </div>
     </div>
@@ -91,28 +92,25 @@
   <h2 class="heading lang" data-en="Projects" data-es="Proyectos">Projects</h2>
   <div class="projects-box">
     <div class="projects-card">
-      <img src="img/movies.jpg" alt="" loading="lazy">
-      <h3 class="lang" data-en="Cine Cythe" data-es="Cine Cythe">Cine Cythe</h3>
-      <p class="lang" data-en="Cine Cythe is a website for finding out about the most watched movies of the moment, action movies, and new releases." data-es="Cine Cythe es un sitio web para informarse sobre las películas más vistas del momento, películas de acción y nuevos estrenos.">Cine Cythe is a website for finding out about the most watched movies of the moment, action movies, and new releases.</p>
-      <a href="https://studentkevinc.github.io/" target="_blank" class="btn lang" data-en="Review Project" data-es="Ver Proyecto">Review Project</a>
-    </div>
-    <div class="projects-card">
-      <img src="img/baristas.jpg" alt="" loading="lazy">
-      <h3 class="lang" data-en="Baristas" data-es="Baristas">Baristas</h3>
-      <p class="lang" data-en="Baristas is a website about a restaurant that offers various services such as coffee, food, and desserts, as well as an interactive shopping cart." data-es="Baristas es un sitio web acerca un local que ofrece distintos servicios como cafe,comida o postres ademas de contar con un carrito de compras interactivo..">Baristas is a website about a restaurant that offers various services such as coffee, food, and desserts, as well as an interactive shopping cart.</p>
-      <a href="https://studentkevinc.github.io/baristas.github.io/cafe-pag/index.html" target="_blank" class="btn lang" data-en="Review Project" data-es="Ver Proyecto">Review Project</a>
+      <img src="img/project4.png" alt="" loading="lazy">
+      <h3 class="lang" data-en="MyA Revelaciones" data-es="MyA Revelaciones">MyA Revelaciones</h3>
+      <p class="lang" data-en="MyA Revelaciones is a home cleaning service website offering professional, on-demand house cleaning through a simple and elegant interface." data-es="MyA Revelaciones es un sitio web de servicios de limpieza a domicilio que ofrece limpieza profesional bajo demanda a través de una interfaz sencilla y elegante.">MyA Revelaciones is a home cleaning service website offering professional, on-demand house cleaning through a simple and elegant interface.</p>
+      <a href="https://mya-revelaciones.netlify.app" target="_blank" class="btn lang" data-en="Review Project" data-es="Ver Proyecto">Review Project</a>
+      <a href="https://github.com/StudentKevinC/mya-revelaciones" target="_blank" class="btn lang" data-en="View Code" data-es="Ver Código">View Code</a>
     </div>
     <div class="projects-card">
       <img src="img/project3.png" alt="" loading="lazy">
       <h3 class="lang" data-en="Nik Eventos" data-es="Nik Eventos">Nik Eventos</h3>
       <p class="lang" data-en="Nik Eventos is a website for a modern event center with sections for services, gallery, and contact." data-es="Nik Eventos es un sitio web para un centro de eventos moderno con secciones de servicios, galería y contacto.">Nik Eventos is a website for a modern event center with sections for services, gallery, and contact.</p>
       <a href="https://nik-eventos.netlify.app" target="_blank" class="btn lang" data-en="Review Project" data-es="Ver Proyecto">Review Project</a>
+      <a href="https://github.com/StudentKevinC/nik-eventos" target="_blank" class="btn lang" data-en="View Code" data-es="Ver Código">View Code</a>
     </div>
     <div class="projects-card">
-      <img src="img/project4.png" alt="" loading="lazy">
-      <h3 class="lang" data-en="MyA Revelaciones" data-es="MyA Revelaciones">MyA Revelaciones</h3>
-      <p class="lang" data-en="MyA Revelaciones is a home cleaning service website offering professional, on-demand house cleaning through a simple and elegant interface." data-es="MyA Revelaciones es un sitio web de servicios de limpieza a domicilio que ofrece limpieza profesional bajo demanda a través de una interfaz sencilla y elegante.">MyA Revelaciones is a home cleaning service website offering professional, on-demand house cleaning through a simple and elegant interface.</p>
-      <a href="https://mya-revelaciones.netlify.app" target="_blank" class="btn lang" data-en="Review Project" data-es="Ver Proyecto">Review Project</a>
+      <img src="img/baristas.jpg" alt="" loading="lazy">
+      <h3 class="lang" data-en="Baristas" data-es="Baristas">Baristas</h3>
+      <p class="lang" data-en="Baristas is a website about a restaurant that offers various services such as coffee, food, and desserts, as well as an interactive shopping cart." data-es="Baristas es un sitio web acerca un local que ofrece distintos servicios como cafe,comida o postres ademas de contar con un carrito de compras interactivo..">Baristas is a website about a restaurant that offers various services such as coffee, food, and desserts, as well as an interactive shopping cart.</p>
+      <a href="https://studentkevinc.github.io/baristas.github.io/cafe-pag/index.html" target="_blank" class="btn lang" data-en="Review Project" data-es="Ver Proyecto">Review Project</a>
+      <a href="https://github.com/StudentKevinC/baristas.github.io" target="_blank" class="btn lang" data-en="View Code" data-es="Ver Código">View Code</a>
     </div>
     <div class="projects-card">
       <img src="img/project5.png" alt="" loading="lazy">
@@ -123,6 +121,14 @@
          KevShop is an online store that offers a clean and dynamic shopping experience, focused on user-friendly design and responsive layout.
       </p>
       <a href="https://kevshop.netlify.app/" target="_blank" class="btn lang" data-en="Review Project" data-es="Ver Proyecto">Review Project</a>
+      <a href="https://github.com/StudentKevinC/kevshop" target="_blank" class="btn lang" data-en="View Code" data-es="Ver Código">View Code</a>
+    </div>
+    <div class="projects-card">
+      <img src="img/movies.jpg" alt="" loading="lazy">
+      <h3 class="lang" data-en="Cine Cythe" data-es="Cine Cythe">Cine Cythe</h3>
+      <p class="lang" data-en="Cine Cythe is a website for finding out about the most watched movies of the moment, action movies, and new releases." data-es="Cine Cythe es un sitio web para informarse sobre las películas más vistas del momento, películas de acción y nuevos estrenos.">Cine Cythe is a website for finding out about the most watched movies of the moment, action movies, and new releases.</p>
+      <a href="https://studentkevinc.github.io/" target="_blank" class="btn lang" data-en="Review Project" data-es="Ver Proyecto">Review Project</a>
+      <a href="https://github.com/StudentKevinC/movie-api" target="_blank" class="btn lang" data-en="View Code" data-es="Ver Código">View Code</a>
     </div>
     <div class="projects-card">
       <img src="img/project1.png" alt="" loading="lazy">
@@ -132,6 +138,7 @@
      data-es="Este portafolios muestran mis proyectos académicos y personales de desarrollo web, destacando habilidades en diseño, adaptabilidad y tecnologías modernas.">
      These portfolios showcase my academic and personal web development projects, highlighting skills in design, responsiveness, and modern technologies.
   </p>      <a href="#" class="btn lang" data-en="Review Project" data-es="Ver Proyecto">Review Project</a>
+  <a href="https://github.com/StudentKevinC/portafolio" target="_blank" class="btn lang" data-en="View Code" data-es="Ver Código">View Code</a>
     </div>
   </div>
   <div class="centered" style="text-align:center;margin-top:3rem;">
@@ -151,7 +158,7 @@
       </div>
       <div class="input-group-2">
         <textarea name="message" class="lang" data-en="Your Message" data-es="Tu mensaje" placeholder="Your Message" required></textarea>
-        <input type="submit" class="btn lang" data-en="Send Message" data-es="Enviar Mensaje" value="Send Message">
+        <button type="button" class="btn lang" data-en="Send Message" data-es="Enviar Mensaje" onclick="handleWhatsAppRedirect(event)">Send Message</button>
       </div>
     </div>
   </form>
@@ -174,5 +181,25 @@
 </footer>
 <script src="https://kit.fontawesome.com/e9de50e2aa.js" crossorigin="anonymous"></script>
 <script src="script.js"></script>
+<script>
+  function handleWhatsAppRedirect(event) {
+    const form = event.target.closest("form");
+    if (!form.checkValidity()) {
+      form.reportValidity();
+      return;
+    }
+
+    const name = form.querySelector('input[name="name"]').value;
+    const email = form.querySelector('input[name="email"]').value;
+    const message = form.querySelector('textarea[name="message"]').value;
+
+    const text = `Hola Kevin, mi nombre es ${encodeURIComponent(name)} (%20${encodeURIComponent(email)}), vi tu portafolio y me gustaría contactarte. Este es mi mensaje: ${encodeURIComponent(message)}`;
+
+    form.reset(); // Limpiar el formulario después de obtener los datos
+
+    const url = `https://wa.me/56920676334?text=${text}`;
+    window.open(url, '_blank');
+  }
+</script>
 </body>
 </html>
