Actualizo estilos, diseño responsivo y tarjetas de proyectos

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
       <h3 class="lang" data-en="MyA Revelaciones" data-es="MyA Revelaciones">MyA Revelaciones</h3>
       <p class="lang" data-en="MyA Revelaciones is a home cleaning service website offering professional, on-demand house cleaning through a simple and elegant interface." data-es="MyA Revelaciones es un sitio web de servicios de limpieza a domicilio que ofrece limpieza profesional bajo demanda a través de una interfaz sencilla y elegante.">MyA Revelaciones is a home cleaning service website offering professional, on-demand house cleaning through a simple and elegant interface.</p>
       <a href="https://mya-revelaciones.netlify.app" target="_blank" class="btn lang" data-en="Review Project" data-es="Ver Proyecto">Review Project</a>
-      <a href="https://github.com/StudentKevinC/mya-revelaciones" target="_blank" class="btn lang" data-en="View Code" data-es="Ver Código">View Code</a>
+      <a href="https://github.com/StudentKevinC/MyA-Revelaciones-Pag" target="_blank" class="btn lang" data-en="View Code" data-es="Ver Código">View Code</a>
     </div>
     <div class="projects-card">
       <img src="img/project3.png" alt="" loading="lazy">
@@ -121,14 +121,14 @@
          KevShop is an online store that offers a clean and dynamic shopping experience, focused on user-friendly design and responsive layout.
       </p>
       <a href="https://kevshop.netlify.app/" target="_blank" class="btn lang" data-en="Review Project" data-es="Ver Proyecto">Review Project</a>
-      <a href="https://github.com/StudentKevinC/kevshop" target="_blank" class="btn lang" data-en="View Code" data-es="Ver Código">View Code</a>
+      <a href="https://github.com/StudentKevinC/KevShop-Pag" target="_blank" class="btn lang" data-en="View Code" data-es="Ver Código">View Code</a>
     </div>
     <div class="projects-card">
       <img src="img/movies.jpg" alt="" loading="lazy">
       <h3 class="lang" data-en="Cine Cythe" data-es="Cine Cythe">Cine Cythe</h3>
       <p class="lang" data-en="Cine Cythe is a website for finding out about the most watched movies of the moment, action movies, and new releases." data-es="Cine Cythe es un sitio web para informarse sobre las películas más vistas del momento, películas de acción y nuevos estrenos.">Cine Cythe is a website for finding out about the most watched movies of the moment, action movies, and new releases.</p>
       <a href="https://studentkevinc.github.io/" target="_blank" class="btn lang" data-en="Review Project" data-es="Ver Proyecto">Review Project</a>
-      <a href="https://github.com/StudentKevinC/movie-api" target="_blank" class="btn lang" data-en="View Code" data-es="Ver Código">View Code</a>
+      <a href="https://github.com/StudentKevinC/StudentKevinC.github.io" target="_blank" class="btn lang" data-en="View Code" data-es="Ver Código">View Code</a>
     </div>
     <div class="projects-card">
       <img src="img/project1.png" alt="" loading="lazy">
