--- a/more-projects.html
+++ b/more-projects.html
@@ -4,55 +4,83 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Más Proyectos | Kevin Cornejo</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style2.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
-
 </head>
 <body>
-    <div class="stars"></div>
-    <div class="shooting-star"></div>
-    <div class="shooting-star"></div>
-    <div class="shooting-star"></div>
-    <div class="shooting-star"></div>
-    <div class="shooting-star"></div>
-
-    <header class="header">
-        <a href="index.html#home" class="logo">
-            Kevin <span class="span">Cornejo</span>
-        </a>
-        <i class="bx bx-menu" id="menu-icon"></i>
-        <nav class="navbar">
-            <a href="index.html#home">Home</a>
-            <a href="index.html#about">About</a>
-            <a href="index.html#skills">Skills</a>
-            <a href="index.html#projects">Projects</a>
-            <a href="index.html#contact">Contact</a>
-        </nav>
-        <button class="gradient-btn" onclick="window.location.href='index.html#contact'">Contact Me</button>
-    </header>
-
-    <section class="projects" style="opacity:1; justify-content:center; align-items:center; min-height:80vh; position: relative;">
-    <h1 style="font-size:6rem;color:var(--main-color);text-align:center;">More Projects Coming Soon 🚧</h1>
+<section class="projects" id="projects">
+  <h2 class="heading lang" data-en="Projects" data-es="Proyectos">Projects</h2>
+  <div class="projects-box">
+    <div class="projects-card">
+      <img src="img/project4.png" alt="" loading="lazy">
+      <h3 class="lang" data-en="MyA Revelaciones" data-es="MyA Revelaciones">MyA Revelaciones</h3>
+      <p class="lang" data-en="MyA Revelaciones is a home cleaning service website offering professional, on-demand house cleaning through a simple and elegant interface." data-es="MyA Revelaciones es un sitio web de servicios de limpieza a domicilio que ofrece limpieza profesional bajo demanda a través de una interfaz sencilla y elegante.">MyA Revelaciones is a home cleaning service website offering professional, on-demand house cleaning through a simple and elegant interface.</p>
+      <a href="https://mya-revelaciones.netlify.app" target="_blank" class="btn lang" data-en="Review Project" data-es="Ver Proyecto">Review Project</a>
+      <a href="https://github.com/StudentKevinC/MyA-Revelaciones-Pag" target="_blank" class="btn lang" data-en="View Code" data-es="Ver Código">View Code</a>
+    </div>
+    <div class="projects-card">
+      <img src="img/project3.png" alt="" loading="lazy">
+      <h3 class="lang" data-en="Nik Eventos" data-es="Nik Eventos">Nik Eventos</h3>
+      <p class="lang" data-en="Nik Eventos is a website for a modern event center with sections for services, gallery, and contact." data-es="Nik Eventos es un sitio web para un centro de eventos moderno con secciones de servicios, galería y contacto.">Nik Eventos is a website for a modern event center with sections for services, gallery, and contact.</p>
+      <a href="https://nik-eventos.netlify.app" target="_blank" class="btn lang" data-en="Review Project" data-es="Ver Proyecto">Review Project</a>
+      <a href="https://github.com/StudentKevinC/nik-eventos" target="_blank" class="btn lang" data-en="View Code" data-es="Ver Código">View Code</a>
+    </div>
+    <div class="projects-card">
+      <img src="img/baristas.jpg" alt="" loading="lazy">
+      <h3 class="lang" data-en="Baristas" data-es="Baristas">Baristas</h3>
+      <p class="lang" data-en="Baristas is a website about a restaurant that offers various services such as coffee, food, and desserts, as well as an interactive shopping cart." data-es="Baristas es un sitio web acerca un local que ofrece distintos servicios como cafe,comida o postres ademas de contar con un carrito de compras interactivo..">Baristas is a website about a restaurant that offers various services such as coffee, food, and desserts, as well as an interactive shopping cart.</p>
+      <a href="https://studentkevinc.github.io/baristas.github.io/cafe-pag/index.html" target="_blank" class="btn lang" data-en="Review Project" data-es="Ver Proyecto">Review Project</a>
+      <a href="https://github.com/StudentKevinC/baristas.github.io" target="_blank" class="btn lang" data-en="View Code" data-es="Ver Código">View Code</a>
+    </div>
+    <div class="projects-card">
+      <img src="img/project5.png" alt="" loading="lazy">
+      <h3 class="lang" data-en="KevShop" data-es="KevShop">KevShop</h3>
+      <p class="lang"
+         data-en="KevShop is an online store that offers a clean and dynamic shopping experience, focused on user-friendly design and responsive layout."
+         data-es="KevShop es una tienda en línea que ofrece una experiencia de compra limpia y dinámica, enfocada en un diseño fácil de usar y un diseño responsivo.">
+         KevShop is an online store that offers a clean and dynamic shopping experience, focused on user-friendly design and responsive layout.
+      </p>
+      <a href="https://kevshop.netlify.app/" target="_blank" class="btn lang" data-en="Review Project" data-es="Ver Proyecto">Review Project</a>
+      <a href="https://github.com/StudentKevinC/KevShop-Pag" target="_blank" class="btn lang" data-en="View Code" data-es="Ver Código">View Code</a>
+    </div>
+    <div class="projects-card">
+      <img src="img/movies.jpg" alt="" loading="lazy">
+      <h3 class="lang" data-en="Cine Cythe" data-es="Cine Cythe">Cine Cythe</h3>
+      <p class="lang" data-en="Cine Cythe is a website for finding out about the most watched movies of the moment, action movies, and new releases." data-es="Cine Cythe es un sitio web para informarse sobre las películas más vistas del momento, películas de acción y nuevos estrenos.">Cine Cythe is a website for finding out about the most watched movies of the moment, action movies, and new releases.</p>
+      <a href="https://studentkevinc.github.io/" target="_blank" class="btn lang" data-en="Review Project" data-es="Ver Proyecto">Review Project</a>
+      <a href="https://github.com/StudentKevinC/StudentKevinC.github.io" target="_blank" class="btn lang" data-en="View Code" data-es="Ver Código">View Code</a>
+    </div>
+    <div class="projects-card">
+      <img src="img/project1.png" alt="" loading="lazy">
+      <h3 class="lang" data-en="To-Do App" data-es="To-Do App">Portafolios Personal</h3>
+<p class="lang"
+     data-en="These portfolios showcase my academic and personal web development projects, highlighting skills in design, responsiveness, and modern technologies."
+     data-es="Este portafolios muestran mis proyectos académicos y personales de desarrollo web, destacando habilidades en diseño, adaptabilidad y tecnologías modernas.">
+     These portfolios showcase my academic and personal web development projects, highlighting skills in design, responsiveness, and modern technologies.
+  </p>
+      <a href="#" class="btn lang" data-en="Review Project" data-es="Ver Proyecto">Review Project</a>
+      <a href="https://github.com/StudentKevinC/portafolio" target="_blank" class="btn lang" data-en="View Code" data-es="Ver Código">View Code</a>
+    </div>
+    <div class="projects-card">
+      <img src="img/proyecto7.png" alt="Tic Tac Toe Game" loading="lazy">
+      <h3 class="lang" data-en="Tic Tac Toe" data-es="Tres en Línea">Tic Tac Toe</h3>
+      <p class="lang" data-en="A futuristic neon-style Tic Tac Toe game with AI opponent and score tracking." data-es="Un juego de Tres en Línea con estilo futurista neón, oponente IA y contador de puntaje.">
+        A futuristic neon-style Tic Tac Toe game with AI opponent and score tracking.
+      </p>
+      <a href="https://tictactoe-kevinc.netlify.app" target="_blank" class="btn lang" data-en="Review Project" data-es="Ver Proyecto">Review Project</a>
+      <a href="https://github.com/StudentKevinC/tictactoe-pag" target="_blank" class="btn lang" data-en="View Code" data-es="Ver Código">View Code</a>
+    </div>
+    <div class="projects-card">
+      <img src="img/project8.png" alt="Calculator App" loading="lazy">
+      <h3 class="lang" data-en="Calculator" data-es="Calculadora">Calculator</h3>
+      <p class="lang" data-en="A responsive calculator built with JavaScript that supports basic arithmetic operations." data-es="Una calculadora responsiva construida con JavaScript que soporta operaciones aritméticas básicas.">
+        A responsive calculator built with JavaScript that supports basic arithmetic operations.
+      </p>
+      <a href="https://calculadora-kevinc.netlify.app" target="_blank" class="btn lang" data-en="Review Project" data-es="Ver Proyecto">Review Project</a>
+      <a href="https://github.com/StudentKevinC/calculadora-pag" target="_blank" class="btn lang" data-en="View Code" data-es="Ver Código">View Code</a>
+    </div>
+  </div>
 </section>
-
-
-    <footer class="footer">
-        <div class="social-icons">
-            <a href="#"><i class="fa-brands fa-github"></i></a>
-            <a href="#"><i class="fa-brands fa-linkedin"></i></a>
-            <a href="#"><i class="fa-brands fa-instagram"></i></a>
-            <a href="#"><i class="fa-brands fa-discord"></i></a>
-        </div>
-        <ul class="list">
-            <li><a href="index.html#skills">Skills</a></li>
-            <li><a href="index.html#about">About Me</a></li>
-            <li><a href="index.html#projects">Projects</a></li>
-            <li><a href="index.html#contact">Contact</a></li>
-        </ul>
-        <p class="copyright">
-            © Kevin Cornejo | All Rights Reserved
-        </p>
-    </footer>
     <script src="https://kit.fontawesome.com/e9de50e2aa.js" crossorigin="anonymous"></script>
 </body>
 </html>
